<resources>
    <string name="app_name">Phonebook</string>
    <string name="action_settings">Settings</string>
    <string name="menu_call">Call</string>
    <string name="menu_sms">Send msg</string>
    <string name="menu_shareo">Share</string>
    <string name="menu_share">Share</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pick_photo">Pick photo</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="label_name">Name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_e_mail">E-mail</string>
    <string name="label_phone_number">Phone number</string>
</resources>
