<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="wrap_content"
              android:layout_width="match_parent">


    <EditText
        android:id="@+id/et_add_contact_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/first_name"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:id="@+id/et_add_contact_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/last_name"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:id="@+id/et_add_contact_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:id="@+id/et_add_contact_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/email"
        android:inputType="textEmailAddress"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <Button
        android:id="@+id/button_photo_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_photo"/>
</LinearLayout>