<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ua.lelpel.phonebook.ui.ContactDetailsActivity"
    tools:showIn="@layout/activity_contact_details">


    <ImageView
        android:id="@+id/img_details_photo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/label_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"/>

    <TextView
        android:id="@+id/tv_details_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <TextView
        android:id="@+id/label_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_last_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"/>


    <TextView
        android:id="@+id/tv_details_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <TextView
        android:id="@+id/label_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_phone_number"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"/>


    <TextView
        android:id="@+id/tv_details_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <TextView
        android:id="@+id/label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_e_mail"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"/>


    <TextView
        android:id="@+id/tv_details_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginStart="@dimen/margin_medium"/>
</LinearLayout>